dual/app/Kefico/Dsa.Kefico.Cp/bin/x86/nmc2.h



typedef struct TNMC_EQUIP_LIST
{
	/*
	192.168.0.11
		BIT0~BIT7  : 192
		BIT8~BIT15  : 168
		BIT16~BIT23  : 0
		BIT24~BIT31  : 11
	*/
	int lIP[200];
	int lModelType[200];
	short nMotionType[200];
	short nDioType[200];
	short nEXDio[200];
	short nMDio[200];

}NMCEQUIPLIST,*PNMCEQUIPLIST;
//-----------------------------------------------------------------------------
short WINAPI nmc_GetDIOInput(short nNmcNo, short *pnInStatus);

short WINAPI nmc_GetDIOInput128(short nNmcNo, short *pnInStatus);

short WINAPI nmc_GetDIOOutput(short nNmcNo, short *pnOutStatus);

short WINAPI nmc_GetDIOOutput128(short nNmcNo, short *pnOutStatus);

short WINAPI nmc_SetDIOOutput(short nNmcNo, short *pnOutStatus);

short WINAPI nmc_SetDIOOutput128(short nNmcNo, short *pnOutStatus);
	short WINAPI nmc_GetDIOInputBit(short nNmcNo, short nBitNo,short *pnInStatus); //사용안함
	short WINAPI nmc_SetDIOOutputBit(short nNmcNo, short nBitno, short nOutStatus); //사용안함
	short WINAPI nmc_SetDIOOutputTog(short nNmcNo, short nBitNo); //사용안함
	short WINAPI nmc_SetDIOOutputAll(short nNmcNo, short *pnOnBitNo, short *pnOffBitNo); //사용안함
	short WINAPI nmc_SetDIOOutputTogAll(short nNmcNo, short *pnBitNo); //사용안함
	short WINAPI nmc_GetDIOInput64(short nNmcNo, LONG64 *plInStatus); //사용안함
	short WINAPI nmc_GetDIOOutput64(short nNmcNo, LONG64 *plOutStatus); //사용안함
	short WINAPI nmc_SetDIOOutput64(short nNmcNo, LONG64 lOutStatus); //사용안함
	short WINAPI nmc_GetDIOInput32(short nNmcNo, short nIndex, int *plInStatus); //사용안함
	short WINAPI nmc_GetDIOOutput32(short nNmcNo, short nIndex, int *plOutStatus); //사용안함
	short WINAPI nmc_SetDIOOutput32(short nNmcNo, short nIndex, int lOutStatus); //사용안함
//-----------------------------------------------------------------------------
short WINAPI nmc_GetEXDIOInput(short nNmcNo, short *pnInStatus);

short WINAPI nmc_SetEXDIOOutput(short nNmcNo, short *pnOutStatus);

short WINAPI nmc_GetEXDIOOutput(short nNmcNo, short *pnOutStatus);

short WINAPI nmc_SetEXDIOOutPin(short nNmcNo, short nPinNo, short nOutStatus);

short WINAPI nmc_SetEXDIOOutTogPin(short nNmcNo, short nPinNo);

short WINAPI nmc_SetEXDIOOutPins(short nNmcNo, short nCount, short *pnPinNo, short *pnStatus);

short WINAPI nmc_SetEXDIOOutTogPins(short nNmcNo, short nCount, short *pnPinNo);


	short WINAPI nmc_GetEXDIOInPin(short nNmcNo, short nPinNo,short *pnInStatus); //사용안함
	short WINAPI nmc_GetEXDIOInputBit(short nNmcNo, short nBitNo,short *pnInStatus); //사용안함
	short WINAPI nmc_SetEXDIOOutputBit(short nNmcNo, short nBitNo, short nOutStatus); //사용안함
	short WINAPI nmc_SetEXDIOOutputTog(short nNmcNo, short nBitNo); //사용안함
	short WINAPI nmc_SetEXDIOOutputAll(short nNmcNo, short *pnOnBitNo, short *pnOffBitNo); //사용안함
	short WINAPI nmc_SetEXDIOOutputTogAll(short nNmcNo, short *pnBitNo); //사용안함
	short WINAPI nmc_GetEXDIOInput32(short nNmcNo, int *plInStatus); //사용안함
	short WINAPI nmc_GetEXDIOOutput32(short nNmcNo, int *plOutStatus); //사용안함
	short WINAPI nmc_SetEXDIOOutput32(short nNmcNo, int lOutStatus); //사용안함
//-----------------------------------------------------------------------------
short WINAPI nmc_SetOutLimitTimePin(short nNmcNo, short nIoType, short nPinNo, short nOutStatus, int nTime);

short WINAPI nmc_GetOutLimitTimePin(short nNmcNo,short nIoType, short nPinNo,
									short *pnSet,  short *pnStatus,  short *pnOutStatus, 
									int *pnRemainTime);

//-----------------------------------------------------------------------------
short WINAPI nmc_GetFirmVersion(short nNmcNo,char *pStr); //사용안함
//-----------------------------------------------------------------------------
short WINAPI nmc_SetUnitPerPulse(short nNmcNo, short nAxisNo, double dRatio);

	double WINAPI nmc_GetUnitPerPulse(short nNmcNo, short nAxisNo); //사용안함
//-----------------------------------------------------------------------------
void WINAPI nmc_SetProtocolMethod(short nNmcNo, short nMethod);

	short WINAPI nmc_GetProtocolMethod(short nNmcNo); //사용안함
//-----------------------------------------------------------------------------
void WINAPI nmc_SetIPAddress(short nNmcNo,short nField0,short nField1,short nField2);

short WINAPI nmc_WriteIPAddress(short nNmcNo, short *pnIP, short *pnSubNet,short nGateway);

	bool WINAPI nmc_GetIPAddress(short *pnField0,short *pnField1,short *pnField2,short *pnField3); //사용안함
	short WINAPI nmc_SetDefaultIPAddress(short nNmcNo); //사용안함
//-----------------------------------------------------------------------------
short WINAPI nmc_GetDeviceType(short nNmcNo, int *plDeviceType);


short WINAPI nmc_GetDeviceInfo(short nNmcNo, short *pnMotionType, short *pnDioType, short *pnEXDio, short *pnMDio);

int WINAPI nmc_GetEnumList(short *pnIp,PNMCEQUIPLIST pNmcList);

short WINAPI nmc_GetDIOInfo(short nNmcNo, short *pnInCount, short *pnOutCount);

//-----------------------------------------------------------------------------

short WINAPI nmc_MotCfgSaveToROM(short nNmcNo, short nMode);

short WINAPI nmc_MotCfgSetDefaultROM(short nNmcNo, short nMode);

short WINAPI nmc_MotCfgLoadFromROM(short nNmcNo, short nMode);


//------------------------------------------------------------------------------
	short WINAPI nmc_AccOffsetCount(short nNmcNo, short nAxisNo, int lPulse); //사용안함
//------------------------------------------------------------------------------
short WINAPI nmc_PingCheck(short nNmcNo, int lWaitTime);