dual/app/Kefico/Dsa.Kefico.Cp/Dsu.Driver.PaixWrapper/nmc2.cs


        [DllImport("NMC2.dll", EntryPoint = "nmc_GetDIOInput")]
        public static extern short GetDIOInput(short nNmcNo, short[] pnInStatus);
        [DllImport("NMC2.dll", EntryPoint = "nmc_GetDIOInput128")]
        public static extern short GetDIOInput128(short nNmcNo, short[] pnInStatus);
        [DllImport("NMC2.dll", EntryPoint = "nmc_GetDIOInputBit")]
        public static extern short GetDIOInputBit(short nNmcNo, short nBitNo, out short pnInStatus);

        [DllImport("NMC2.dll", EntryPoint = "nmc_GetDIOOutput")]
        public static extern short GetDIOOutput(short nNmcNo, short[] pnOutStatus);
        [DllImport("NMC2.dll", EntryPoint = "nmc_GetDIOOutput128")]
        public static extern short GetDIOOutput128(short nNmcNo, short[] pnOutStatus);

        [DllImport("NMC2.dll", EntryPoint = "nmc_SetDIOOutput")]
        public static extern short SetDIOOutput(short nNmcNo, short[] pnOutStatus);
        [DllImport("NMC2.dll", EntryPoint = "nmc_SetDIOOutput128")]
        public static extern short SetDIOOutput128(short nNmcNo, short[] pnOutStatus);

        [DllImport("NMC2.dll", EntryPoint = "nmc_SetDIOOutputBit")]
        public static extern short SetDIOOutputBit(short nNmcNo, short nBitno, short nOutStatus);
        [DllImport("NMC2.dll", EntryPoint = "nmc_SetDIOOutputTog")]
        public static extern short SetDIOOutputTog(short nNmcNo, short nBitNo);
        [DllImport("NMC2.dll", EntryPoint = "nmc_SetDIOOutputAll")]
        public static extern short SetDIOOutputAll(short nNmcNo, short[] pnOnBitNo, short[] pnOffBitNo);
        [DllImport("NMC2.dll", EntryPoint = "nmc_SetDIOOutputTogAll")]
        public static extern short SetDIOOutputTogAll(short nNmcNo, short[] pnBitNo);
        [DllImport("NMC2.dll", EntryPoint = "nmc_GetDIOInput64")]
        public static extern short GetDIOInput64(short nNmcNo, out long plInStatus);
        [DllImport("NMC2.dll", EntryPoint = "nmc_GetDIOOutput64")]
        public static extern short GetDIOOutput64(short nNmcNo, out long plOutStatus);
        [DllImport("NMC2.dll", EntryPoint = "nmc_SetDIOOutput64")]
        public static extern short SetDIOOutput64(short nNmcNo, long lOutStatus);

        [DllImport("NMC2.dll", EntryPoint = "nmc_GetDIOInput32")]
        public static extern short GetDIOInput32(short nNmcNo, short nIndex, out int plInStatus);
        [DllImport("NMC2.dll", EntryPoint = "nmc_GetDIOOutput32")]
        public static extern short GetDIOOutput32(short nNmcNo, short nIndex, out int plOutStatus);
        [DllImport("NMC2.dll", EntryPoint = "nmc_SetDIOOutput32")]
        public static extern short SetDIOOutput32(short nNmcNo, short nIndex, int lOutStatus);
        //-----------------------------------------------------------------------------
        [DllImport("NMC2.dll", EntryPoint = "nmc_SetEXDIOOutPin")]
        public static extern short SetEXDIOOutPin(short nNmcNo, short nPinNo, out short nOutStatus);
        [DllImport("NMC2.dll", EntryPoint = "nmc_SetEXDIOOutTogPin")]
        public static extern short SetEXDIOOutTogPin(short nNmcNo, short nPinNo);
        [DllImport("NMC2.dll", EntryPoint = "nmc_SetEXDIOOutPins")]
        public static extern short SetEXDIOOutPins(short nNmcNo, short nCount, short[] pnPinNo, short[] pnStatus);
        [DllImport("NMC2.dll", EntryPoint = "nmc_SetEXDIOOutTogPins")]
        public static extern short SetEXDIOOutTogPins(short nNmcNo, short nCount, short[] pnPinNo);
        [DllImport("NMC2.dll", EntryPoint = "nmc_GetEXDIOInPin")]
        public static extern short GetEXDIOInPin(short nNmcNo, short nPinNo, out short pnInStatus);

        [DllImport("NMC2.dll", EntryPoint = "nmc_GetEXDIOInput")]
        public static extern short GetEXDIOInput(short nNmcNo, short[] pnInStatus);
        [DllImport("NMC2.dll", EntryPoint = "nmc_GetEXDIOInputBit")]
        public static extern short GetEXDIOInputBit(short nNmcNo, short nBitNo, out short pnInStatus);
        [DllImport("NMC2.dll", EntryPoint = "nmc_GetEXDIOOutput")]
        public static extern short GetEXDIOOutput(short nNmcNo, short[] pnOutStatus);

        [DllImport("NMC2.dll", EntryPoint = "nmc_SetEXDIOOutput")]
        public static extern short SetEXDIOOutput(short nNmcNo, short[] pnOutStatus);

        [DllImport("NMC2.dll", EntryPoint = "nmc_SetEXDIOOutputBit")]
        public static extern short SetEXDIOOutputBit(short nNmcNo, short nBitNo, short nOutStatus);
        [DllImport("NMC2.dll", EntryPoint = "nmc_SetEXDIOOutputTog")]
        public static extern short SetEXDIOOutputTog(short nNmcNo, short nBitNo);
        [DllImport("NMC2.dll", EntryPoint = "nmc_SetEXDIOOutputAll")]
        public static extern short SetEXDIOOutputAll(short nNmcNo, short[] pnOnBitNo, short[] pnOffBitNo);
        [DllImport("NMC2.dll", EntryPoint = "nmc_SetEXDIOOutputTogAll")]
        public static extern short SetEXDIOOutputTogAll(short nNmcNo, short[] pnBitNo);

        [DllImport("NMC2.dll", EntryPoint = "nmc_GetEXDIOInput32")]
        public static extern short GetEXDIOInput32(short nNmcNo, out int plInStatus);
        [DllImport("NMC2.dll", EntryPoint = "nmc_GetEXDIOOutput32")]
        public static extern short GetEXDIOOutput32(short nNmcNo, out int plOutStatus);
        [DllImport("NMC2.dll", EntryPoint = "nmc_SetEXDIOOutput32")]
        public static extern short SetEXDIOOutput32(short nNmcNo, int lOutStatus);
        //-----------------------------------------------------------------------------
        [DllImport("NMC2.dll", EntryPoint = "nmc_SetOutLimitTimePin")]
        public static extern short SetOutLimitTimePin(short nNmcNo, short nIoType, short nPinNo, short nOn, int nTime);
        [DllImport("NMC2.dll", EntryPoint = "nmc_GetOutLimitTimePin")]
        public static extern short GetOutLimitTimePin(short nNmcNo, short nIoType, short nPinNo, out short pnSet, out short pnStatus, out short pnOutStatus, out int pnRemainTime);
        //-----------------------------------------------------------------------------
        [DllImport("NMC2.dll", EntryPoint = "nmc_GetFirmVersion")]
        public static extern short GetFirmVersion(short nNmcNo, out char pStr);
        //-----------------------------------------------------------------------------
        [DllImport("NMC2.dll", EntryPoint = "nmc_SetUnitPerPulse")]
        public static extern short SetUnitPerPulse(short nNmcNo, short nAxisNo, double dRatio);
        [DllImport("NMC2.dll", EntryPoint = "nmc_GetUnitPerPulse")]
        public static extern double GetUnitPerPulse(short nNmcNo, short nAxisNo);
        //-----------------------------------------------------------------------------
        [DllImport("NMC2.dll", EntryPoint = "nmc_SetProtocolMethod")]
        public static extern void SetProtocolMethod(short nNmcNo, short nMethod);
        [DllImport("NMC2.dll", EntryPoint = "nmc_GetProtocolMethod")]
        public static extern short GetProtocolMethod(short nNmcNo);
        //-----------------------------------------------------------------------------
        [DllImport("NMC2.dll", EntryPoint = "nmc_GetIPAddress")]
        public static extern short GetIPAddress(out short pnField0, out short pnField1, out short pnField2, out short pnField3);
        [DllImport("NMC2.dll", EntryPoint = "nmc_SetIPAddress")]
        public static extern short SetIPAddress(short nNmcNo, short nField0, short nField1, short nField2);
        [DllImport("NMC2.dll", EntryPoint = "nmc_WriteIPAddress")]
        public static extern short WriteIPAddress(short nNmcNo, short[] pnIP, short[] pnSubNet, short nGateway);
        [DllImport("NMC2.dll", EntryPoint = "nmc_SetDefaultIPAddress")]
        public static extern short SetDefaultIPAddress(short nNmcNo);
        //-----------------------------------------------------------------------------
        [DllImport("NMC2.dll", EntryPoint = "nmc_GetDeviceType")]
        public static extern short GetDeviceType(short nNmcNo, out int plDeviceType);

        [DllImport("NMC2.dll", EntryPoint = "nmc_GetDeviceInfo")]
        public static extern short GetDeviceInfo(short nNmcNo, out short pnMotionType, out short pnDioType, out short pnEXDio, out short pnMDio);
        [DllImport("NMC2.dll", EntryPoint = "nmc_GetEnumList")]
        public static extern int GetEnumList(short[] pnIp, out NMCEQUIPLIST pNmcList);  // PAIX 문의해서 API 수정된 부분.
        [DllImport("NMC2.dll", EntryPoint = "nmc_GetDIOInfo")]
        public static extern int GetDIOInfo(short nNmcNo, out short pnInCount, out short pnOutCount);
        //-----------------------------------------------------------------------------
        [DllImport("NMC2.dll", EntryPoint = "nmc_DIOTest")]
        public static extern short DIOTest(short nNmcNo, short nMode, short nDelay);
        //-----------------------------------------------------------------------------
        [DllImport("NMC2.dll", EntryPoint = "nmc_MotCfgSaveToROM")]
        public static extern short MotCfgSaveToROM(short nNmcNo, short nMode);
        [DllImport("NMC2.dll", EntryPoint = "nmc_MotCfgSetDefaultROM")]
        public static extern short MotCfgSetDefaultROM(short nNmcNo, short nMode);
        [DllImport("NMC2.dll", EntryPoint = "nmc_MotCfgLoadFromROM")]
        public static extern short MotCfgLoadFromROM(short nNmcNo, short nMode);

        //------------------------------------------------------------------------------
        [DllImport("NMC2.dll", EntryPoint = "nmc_AccOffsetCount")]
        public static extern short AccOffsetCount(short nNmcNo, short nAxisNo, int lPulse);
        //------------------------------------------------------------------------------
        [DllImport("NMC2.dll", EntryPoint = "nmc_PingCheck")]
        public static extern short PingCheck(short nNmcNo, int lWaitTime);
